Fix Product Browse Compatibility Issue on IE11
* Declare `.c-product-card__img-wrap:min-height: 1%;` to fix product browse image spacing issue

[Cafe Rio — Product/Category Browse — Bugs]

--- a/src/app/styles/shame.less
+++ b/src/app/styles/shame.less
@@ -46,3 +46,7 @@ li a,
 .c-category-card__img-wrap {
 min-height: 1%;
 }
+
+.c-product-card__img-wrap {
+min-height: 1%;
+}
